<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/historyDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.history.HistoryDetailActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_plant_disease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="@font/montserrat_bold"
            android:layout_gravity="center"
            android:text="@string/plant_disease"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginHorizontal="24dp"
            android:text="@string/disease_description" />

        <TextView
            android:id="@+id/tv_causses_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="24dp"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/yellow"
            android:text="@string/causes" />

        <TextView
            android:id="@+id/tv_causes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="24dp"
            android:text="@string/list_causes" />

        <TextView
            android:id="@+id/tv_ssolution_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="24dp"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/yellow"
            android:text="@string/solution" />

        <TextView
            android:id="@+id/tv_solution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="24dp"
            android:text="@string/list_solution" />

        <TextView
            android:id="@+id/tv_timestap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="24dp"
            android:text="@string/date" />

    </LinearLayout>

</ScrollView>